--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,15 +7,15 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/main_color"
+        android:background="@color/colorPrimary"
         android:id="@+id/toolbar_detail"
         app:navigationIcon="?attr/homeAsUpIndicator"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="Manage User"/>
+        app:title=""/>
 
     <ScrollView
         android:layout_below="@id/toolbar_detail"
@@ -403,7 +403,7 @@
                 android:padding="10dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
-                android:background="@color/main_color"
+                android:background="@color/colorPrimary"
                 android:textColor="@color/white"
                 android:text="Save" />
 
